<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Booking Gedung App</string>
    <string name="booking_text">Booking</string>
    <string name="fasilitas_text">Fasilitas</string>
    <string name="lihat_lokasi_text">Lihat Lokasi</string>

    <string name="time_1">08:00 - 09:00</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="tipe_pengguna_text">Tipe Pengguna</string>
    <string name="pilih_tipe_pengguna_text">Tipe Pengguna</string>
    <string name="sign_in_text">Sign In</string>
    <string name="email_text">Email</string>
    <string name="time_2">09:00 - 10:00</string>
    <string name="time_3">10:00 - 11:00</string>
    <string name="time_4">11:00 - 12:00</string>
    <string name="time_5">12:00 - 13:00</string>
    <string name="time_6">13:00 - 14:00</string>
    <string name="time_7">14:00 - 15:00</string>
    <string name="time_8">15:00 - 16:00</string>
    <string name="time_9">16:00 - 17:00</string>
    <string name="time_10">17:00 - 18:00</string>
    <string name="time_12">19:00 - 20:00</string>
    <string name="time_11">18:00 - 19:00</string>
    <string name="time_13">20:00 - 21:00</string>
    <string name="time_14">21:00 - 22:00</string>
    <string name="change_date_text">Ubah Tanggal</string>
    <string name="sign_up_text">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_text">Nama</string>
    <string name="no_hp_text">Nomor HP</string>
    <string name="jenis_kelamin_text">Jenis Kelamin</string>
    <string name="alamat_text">Alamat</string>
    <string name="nama_bank_text">Nama Bank</string>
    <string name="no_rekening_text">Nomor Rekening</string>
    <string name="nama_pemilik_text">Nama Pemilik</string>
    <string name="check_your_connection">Cek Koneksi Internet Anda</string>
    <string name="beranda_pemilik">Beranda</string>
    <string name="beranda">Beranda</string>
    <string name="cari">Cari</string>
    <string name="history">History</string>
    <string name="profile">Profil</string>
    <string name="nama_gedung_text">Nama Gedung</string>
    <string name="kapasitas_text">Kapasitas</string>
    <string name="maps_link_text">Link Maps</string>
    <string name="harga_text">Harga</string>
    <string name="jam_operasional_text">Jam Operasional</string>
    <string name="parkir_text">Parkir</string>
    <string name="toilet_text">Toilet</string>
    <string name="musollah_text">Musollah</string>
    <string name="kursi_meja_text">Kursi &#47; Meja</string>
    <string name="AC">AC</string>
    <string name="gambar_text">Gambar</string>
    <string name="upload_gambar_text">Upload Gambar</string>
    <string name="simpan_text">Simpan</string>
    <string name="harga_3_juta_text"><![CDATA[Harga > 3 Juta]]></string>
    <string name="harga_3_juta_down_text"><![CDATA[Harga < 3 Juta]]></string>
    <string name="kapasitas_500_up_text"><![CDATA[Kapasitas > 500]]></string>
    <string name="kapasitas_500_down_text"><![CDATA[Kapasitas < 500]]></string>
    <string name="tampil_semua_text">Tampil Semua</string>
    <string name="detail_booking">Detail Booking</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_sudah_bayar">Konfirmasi Sudah Bayar</string>
    <string name="batalkan_pesanan">Batalkan Pesanan</string>
    <string name="log_out">Log Out</string>
    <string name="update">Update</string>
    <string name="cek_agenda">Cek Agenda</string>
    <string name="hapus">Hapus</string>
    <string name="konfirmasi_menghapus">Yakin untuk menghapus ?</string>
    <string name="konfirmasi_menghapus_message">Apakah anda yakin untuk menghapus ?</string>
    <string name="ya">Ya</string>
    <string name="change_password_text">Ubah Password</string>
</resources>