<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lime"
        tools:context=".ui.splashscreen.SplashScreenActivity">

        <ScrollView
            android:id="@+id/container"
            style="@style/container_top_radius"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_top_radius_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/nama_gedung_text" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/dark_gray"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nama_gedung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/kapasitas_text" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/dark_gray"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_kapasitas"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/maps_link_text" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/dark_gray"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_link_maps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/harga_text" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/dark_gray"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_harga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/fasilitas_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="top|center"
                        android:orientation="vertical">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_fs_1"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/parkir_text" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_fs_2"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/toilet_text" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_fs_3"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/musollah_text" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="top|center"
                        android:orientation="vertical">
                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_fs_4"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kursi_meja_text" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_fs_5"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/AC" />
                    </LinearLayout>

                </LinearLayout>



                <TextView
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/jam_operasional_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="top|center"
                        android:orientation="vertical">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_1"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_1" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_2"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_2" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_3"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_3" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_4"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_4" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_5"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_5" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_6"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_6"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_7"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_7"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="top|center"
                        android:orientation="vertical">
                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_8"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_8"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_9"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_9"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_10"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_10"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_11"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_11"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_12"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_12"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_13"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_13"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_time_14"
                            style="@style/small_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_14"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:padding="8dp"
                    android:text="@string/gambar_text" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:cardBackgroundColor="@color/gray"
                    android:elevation="@dimen/dimen_12dp"
                    app:cardCornerRadius="@dimen/dimen_5dp">

                    <ImageView
                        android:id="@+id/iv_gambar_gedung"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dummy_image"/>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_upload_gambar"
                    style="@style/btn_small.light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:text="@string/upload_gambar_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_simpan"
                    style="@style/btn_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/simpan_text" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>