<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.cekagenda.CekAgendaActivity">

            <TextView
                android:id="@+id/tv_title"
                style="@style/big_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_24dp"
                android:background="@color/dark_lime"
                android:text="Checkout"
                android:textColor="@color/white_lime"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toTopOf="@id/layout_button">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nama Gedung : "
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        style="@style/small_text"/>
                    <TextView
                        android:id="@+id/tv_nama_gedung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Gedung Juang Tambun"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        android:textStyle="bold"
                        style="@style/big_text"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tanggal Sewa : "
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        style="@style/small_text"/>
                    <TextView
                        android:id="@+id/tv_tanggal_sewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="05 September 2021"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        android:textStyle="bold"
                        style="@style/big_text"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Waktu Sewa : "
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        style="@style/small_text"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:padding="@dimen/dimen_12dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_time_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_1"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_2"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_3"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_4"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_5"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_6"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_7"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_8"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_9"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_10"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_11"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_12"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_13"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                        <TextView
                            android:id="@+id/tv_time_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time_14"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/big_text"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Biaya Sewa : "
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        style="@style/small_text"/>
                    <TextView
                        android:id="@+id/tv_biaya_sewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Rp. 200.000 x 4 = Rp. 800.000"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        android:textStyle="bold"
                        style="@style/big_text"/>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lime"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/dimen_12dp"
                    android:text="@string/action_cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/dimen_12dp"
                    android:text="@string/booking_text" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</layout>